added reversed implementations for the overloaded operators

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -452,6 +452,72 @@
      "output_type": "display_data"
     },
     {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>i</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>$2.995\\pm0.018$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>$3.27\\pm0.25$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>$3.44\\pm0.60$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>$3.40\\pm0.44$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>$2.56\\pm0.96$</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 z\n",
+       "i                 \n",
+       "0  $2.995\\pm0.018$\n",
+       "1    $3.27\\pm0.25$\n",
+       "2    $3.44\\pm0.60$\n",
+       "3    $3.40\\pm0.44$\n",
+       "4    $2.56\\pm0.96$"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -488,7 +554,59 @@
     "print(z_vals_grouped)\n",
     "display(z_vals_grouped)\n",
     "pt.log(grouped_z_table_1, do_display = True, tex = None)\n",
-    "pt.log(grouped_z_table_2, do_display = False, tex = stdout)"
+    "pt.log(grouped_z_table_2, do_display = True, tex = stdout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Err` objects can be indexed just like numpy arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$3.40\\pm0.44$"
+      ],
+      "text/plain": [
+       "3.40 ± 0.44"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$2.995\\pm0.018,  \\\\3.27\\pm0.25,  \\\\3.40\\pm0.44$"
+      ],
+      "text/plain": [
+       "['2.995' '3.27' '3.40'] ± ['0.018' '0.25' '0.44']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: 2.995 ± 0.018\n",
+      "1: 3.27 ± 0.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "display(z_vals_grouped[3])\n",
+    "display(z_vals_grouped[z_vals_grouped.err < 0.5])\n",
+    "for i, z_val in enumerate(z_vals_grouped[0:2]):\n",
+    "    print(f'{i}: {z_val}')"
    ]
   },
   {
@@ -500,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -596,10 +714,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(y,x,z \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(y,x,z \\right)}\\right)^{2} + s_{z}^{2} \\left(\\frac{\\partial}{\\partial z} w{\\left(y,x,z \\right)}\\right)^{2}$"
+       "$\\displaystyle s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(x,z,y \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(x,z,y \\right)}\\right)^{2} + s_{z}^{2} \\left(\\frac{\\partial}{\\partial z} w{\\left(x,z,y \\right)}\\right)^{2}$"
       ],
       "text/plain": [
-       "Eq(s_w**2, s_x**2*Derivative(w(y, x, z), x)**2 + s_y**2*Derivative(w(y, x, z), y)**2 + s_z**2*Derivative(w(y, x, z), z)**2)"
+       "Eq(s_w**2, s_x**2*Derivative(w(x, z, y), x)**2 + s_y**2*Derivative(w(x, z, y), y)**2 + s_z**2*Derivative(w(x, z, y), z)**2)"
       ]
      },
      "metadata": {},
@@ -638,7 +756,7 @@
        "sqrt(s_x**2*(a*y*exp(y*sin(x))*cos(x)/z + cos(x))**2 + s_y**2*(a*exp(y*sin(x))*sin(x)/z - 1)**2 + s_z**2*(-a*exp(y*sin(x))/z**2)**2)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,14 +785,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The error when computed for each value in the grouped z vals seperately\n"
+      "The error when computed for each value in the grouped z vals separately\n"
      ]
     },
     {
@@ -776,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -852,6 +970,150 @@
     "display(v_val_1)\n",
     "display(v_val_2)\n",
     "assert v_val_1.allclose(v_val_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$4.55\\pm0.61$"
+      ],
+      "text/plain": [
+       "4.55 ± 0.61"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$4.55\\pm0.61$"
+      ],
+      "text/plain": [
+       "4.55 ± 0.61"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$-1.73\\pm0.61$"
+      ],
+      "text/plain": [
+       "-1.73 ± 0.61"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$1.73\\pm0.61$"
+      ],
+      "text/plain": [
+       "1.73 ± 0.61"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$4.4\\pm1.9$"
+      ],
+      "text/plain": [
+       "4.4 ± 1.9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$4.4\\pm1.9$"
+      ],
+      "text/plain": [
+       "4.4 ± 1.9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$0.45\\pm0.19$"
+      ],
+      "text/plain": [
+       "0.45 ± 0.19"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$2.22\\pm0.96$"
+      ],
+      "text/plain": [
+       "2.22 ± 0.96"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$3.0\\pm4.0$"
+      ],
+      "text/plain": [
+       "3.0 ± 4.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$5.0\\pm3.5$"
+      ],
+      "text/plain": [
+       "5.0 ± 3.5"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x_val = pt.Err(1.414, 0.61)\n",
+    "other = 3.141\n",
+    "tests = [\n",
+    "    x_val + other,\n",
+    "    other + x_val,\n",
+    "    x_val - other,\n",
+    "    other - x_val,\n",
+    "    x_val * other,\n",
+    "    other * x_val,\n",
+    "    x_val / other,\n",
+    "    other / x_val,\n",
+    "    x_val ** other,\n",
+    "    other ** x_val,\n",
+    "    ]\n",
+    "display(*tests)"
    ]
   }
  ],
