implemented new ways to instantiate error object from array of error objects.

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -1155,6 +1155,19 @@
     "    ]\n",
     "display(*tests)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C, sigma, alpha = sympy.symbols('C, sigma, alpha')\n",
+    "theoretical_resonance_expr = C / sympy.sqrt(sigma**2 + alpha**2)\n",
+    "\n",
+    "w_vals = np.linspace(0.1, 3.7, 100)\n",
+    "phi_theory_vals = pt.calc_err(theoretical_resonance_expr, {sigma: np.arange(4) - pt.Err(0.4,1), alpha: pt.Err(0.5,1), C: pt.Err(0.5,1)})"
+   ]
   }
  ],
  "metadata": {
