fiexed bug in latex()

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -480,123 +480,19 @@
       "(1.53061106 ± 0.028123%) × 10^3\n",
       "(1.53309916 ± 0.052591%) × 10^3\n",
       "(1.5339923 ± 0.085783%) × 10^3\n",
-      "\n",
-      "simple IPython display\n",
-      "\n"
+      "printing latex representation\n"
      ]
     },
     {
-     "data": {
-      "text/latex": [
-       "$(1.531515 \\pm 0.000027) \\times 10^{3}\\\\(1.53099 \\pm 0.00027) \\times 10^{3}\\\\(1.53061 \\pm 0.00043) \\times 10^{3}\\\\(1.53310 \\pm 0.00081) \\times 10^{3}\\\\(1.5340 \\pm 0.0013) \\times 10^{3}$"
-      ],
-      "text/plain": [
-       "(1.531515 ± 0.000027) × 10^3\n",
-       "(1.53099 ± 0.00027) × 10^3\n",
-       "(1.53061 ± 0.00043) × 10^3\n",
-       "(1.53310 ± 0.00081) × 10^3\n",
-       "(1.5340 ± 0.0013) × 10^3"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "logging a DataFrame, this can optionally write the LaTex representation to a TextIO Stream\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>z</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>i</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>$(1.531515 \\pm 0.000027) \\times 10^{3}$</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>$(1.53099 \\pm 0.00027) \\times 10^{3}$</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>$(1.53061 \\pm 0.00043) \\times 10^{3}$</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>$(1.53310 \\pm 0.00081) \\times 10^{3}$</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>$(1.5340 \\pm 0.0013) \\times 10^{3}$</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         z\n",
-       "i                                         \n",
-       "0  $(1.531515 \\pm 0.000027) \\times 10^{3}$\n",
-       "1    $(1.53099 \\pm 0.00027) \\times 10^{3}$\n",
-       "2    $(1.53061 \\pm 0.00043) \\times 10^{3}$\n",
-       "3    $(1.53310 \\pm 0.00081) \\times 10^{3}$\n",
-       "4      $(1.5340 \\pm 0.0013) \\times 10^{3}$"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\begin{table}[H]\n",
-      "\\centering\n",
-      "\\begin{tabular}{l}\n",
-      "\\toprule\n",
-      "z \\\\\n",
-      "\\midrule\n",
-      "$(1.531515 \\pm 0.000027) \\times 10^{3}$ \\\\\n",
-      "$(1.53099 \\pm 0.00027) \\times 10^{3}$ \\\\\n",
-      "$(1.53061 \\pm 0.00043) \\times 10^{3}$ \\\\\n",
-      "$(1.53310 \\pm 0.00081) \\times 10^{3}$ \\\\\n",
-      "$(1.5340 \\pm 0.0013) \\times 10^{3}$ \\\\\n",
-      "\\bottomrule\n",
-      "\\end{tabular}\n",
-      "\\caption{Caption}\n",
-      "\\label{tab:labelname}\n",
-      "\\end{table}\n",
-      "\n"
+     "ename": "TypeError",
+     "evalue": "Err.latex_array() got an unexpected keyword argument 'val_sigfigs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 10\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(z_vals_grouped\u001b[38;5;241m.\u001b[39mtoString(\u001b[38;5;241m5\u001b[39m, relative\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, expontent_factor\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m))\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprinting latex representation\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28mprint\u001b[39m(z_vals_grouped\u001b[38;5;241m.\u001b[39mlatex())\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124msimple IPython display\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     12\u001b[0m display(z_vals_grouped)\n",
+      "File \u001b[1;32mc:\\Users\\cedric\\Documents\\repos\\PhysicsTool\\PhysicsTool\\err.py:201\u001b[0m, in \u001b[0;36mErr.latex\u001b[1;34m(self, err_sigfigs, val_sigfigs, relative, delimiter)\u001b[0m\n\u001b[0;32m    188\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlatex\u001b[39m(\u001b[38;5;28mself\u001b[39m, err_sigfigs: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m, val_sigfigs: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m5\u001b[39m, relative: \u001b[38;5;28mbool\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, delimiter: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m$\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m    189\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[0;32m    190\u001b[0m \u001b[38;5;124;03m    Generates a LaTeX string for the error and mean values with customizable formatting.\u001b[39;00m\n\u001b[0;32m    191\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    199\u001b[0m \u001b[38;5;124;03m        str: A LaTeX-formatted string.\u001b[39;00m\n\u001b[0;32m    200\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n\u001b[1;32m--> 201\u001b[0m     latex_strings \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mravel(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlatex_array(err_sigfigs\u001b[38;5;241m=\u001b[39merr_sigfigs, val_sigfigs\u001b[38;5;241m=\u001b[39mval_sigfigs, relative\u001b[38;5;241m=\u001b[39mrelative, delimiter\u001b[38;5;241m=\u001b[39mdelimiter))\n\u001b[0;32m    202\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m delimiter \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(latex_strings) \u001b[38;5;241m+\u001b[39m delimiter\n",
+      "\u001b[1;31mTypeError\u001b[0m: Err.latex_array() got an unexpected keyword argument 'val_sigfigs'"
      ]
     }
    ],
@@ -608,7 +504,9 @@
     "print('simple print statement\\n')\n",
     "print(z_vals_grouped)\n",
     "print('\\ntoString() showcasing custom arguments\\n')\n",
-    "print(z_vals_grouped.toString(5, relative=True, expontent_factor=1)) #implement for exponent_factor = 0\n",
+    "print(z_vals_grouped.toString(5, relative=True, expontent_factor=1))\n",
+    "print('printing latex representation')\n",
+    "print(z_vals_grouped.latex())\n",
     "print('\\nsimple IPython display\\n')\n",
     "display(z_vals_grouped)\n",
     "print('\\nlogging a DataFrame, this can optionally write the LaTex representation to a TextIO Stream\\n')\n",
