fixed the delimiter issue in latex

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -481,7 +481,7 @@
       "(1.53309916 ± 0.052591%) × 10^3\n",
       "(1.5339923 ± 0.085783%) × 10^3\n",
       "printing latex representation\n",
-      "$$(1.531515 \\pm 0.000027) \\times 10^{3}$\\\\$(1.53099 \\pm 0.00027) \\times 10^{3}$\\\\$(1.53061 \\pm 0.00043) \\times 10^{3}$\\\\$(1.53310 \\pm 0.00081) \\times 10^{3}$\\\\$(1.5340 \\pm 0.0013) \\times 10^{3}$$\n",
+      "$(1.531515 \\pm 0.000027) \\times 10^{3}$\\\\$(1.53099 \\pm 0.00027) \\times 10^{3}$\\\\$(1.53061 \\pm 0.00043) \\times 10^{3}$\\\\$(1.53310 \\pm 0.00081) \\times 10^{3}$\\\\$(1.5340 \\pm 0.0013) \\times 10^{3}$\n",
       "\n",
       "simple IPython display\n",
       "\n"
@@ -1353,8 +1353,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 1min 49s\n",
-      "Wall time: 19 s\n"
+      "CPU times: total: 1min 48s\n",
+      "Wall time: 18.7 s\n"
      ]
     }
    ],
