improved pandas support

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -462,6 +462,67 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>((((1.531515 ± 0.000027) × 10^3)))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>((((1.53099 ± 0.00027) × 10^3)))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>((((1.53061 ± 0.00043) × 10^3)))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>((((1.53310 ± 0.00081) × 10^3)))</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>((((1.5340 ± 0.0013) × 10^3)))</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    z\n",
+       "0  ((((1.531515 ± 0.000027) × 10^3)))\n",
+       "1    ((((1.53099 ± 0.00027) × 10^3)))\n",
+       "2    ((((1.53061 ± 0.00043) × 10^3)))\n",
+       "3    ((((1.53310 ± 0.00081) × 10^3)))\n",
+       "4      ((((1.5340 ± 0.0013) × 10^3)))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -543,36 +604,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>$(1.531515 \\pm 0.000027) \\times 10^{3}$</td>\n",
+       "      <td>((((1.531515 ± 0.000027) × 10^3)))</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>$(1.53099 \\pm 0.00027) \\times 10^{3}$</td>\n",
+       "      <td>((((1.53099 ± 0.00027) × 10^3)))</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>$(1.53061 \\pm 0.00043) \\times 10^{3}$</td>\n",
+       "      <td>((((1.53061 ± 0.00043) × 10^3)))</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>$(1.53310 \\pm 0.00081) \\times 10^{3}$</td>\n",
+       "      <td>((((1.53310 ± 0.00081) × 10^3)))</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>$(1.5340 \\pm 0.0013) \\times 10^{3}$</td>\n",
+       "      <td>((((1.5340 ± 0.0013) × 10^3)))</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         z\n",
-       "i                                         \n",
-       "0  $(1.531515 \\pm 0.000027) \\times 10^{3}$\n",
-       "1    $(1.53099 \\pm 0.00027) \\times 10^{3}$\n",
-       "2    $(1.53061 \\pm 0.00043) \\times 10^{3}$\n",
-       "3    $(1.53310 \\pm 0.00081) \\times 10^{3}$\n",
-       "4      $(1.5340 \\pm 0.0013) \\times 10^{3}$"
+       "                                    z\n",
+       "i                                    \n",
+       "0  ((((1.531515 ± 0.000027) × 10^3)))\n",
+       "1    ((((1.53099 ± 0.00027) × 10^3)))\n",
+       "2    ((((1.53061 ± 0.00043) × 10^3)))\n",
+       "3    ((((1.53310 ± 0.00081) × 10^3)))\n",
+       "4      ((((1.5340 ± 0.0013) × 10^3)))"
       ]
      },
      "metadata": {},
@@ -588,11 +649,11 @@
       "\\toprule\n",
       "z \\\\\n",
       "\\midrule\n",
-      "$(1.531515 \\pm 0.000027) \\times 10^{3}$ \\\\\n",
-      "$(1.53099 \\pm 0.00027) \\times 10^{3}$ \\\\\n",
-      "$(1.53061 \\pm 0.00043) \\times 10^{3}$ \\\\\n",
-      "$(1.53310 \\pm 0.00081) \\times 10^{3}$ \\\\\n",
-      "$(1.5340 \\pm 0.0013) \\times 10^{3}$ \\\\\n",
+      "(1.531515 ± 0.000027) × 10^3 \\\\\n",
+      "(1.53099 ± 0.00027) × 10^3 \\\\\n",
+      "(1.53061 ± 0.00043) × 10^3 \\\\\n",
+      "(1.53310 ± 0.00081) × 10^3 \\\\\n",
+      "(1.5340 ± 0.0013) × 10^3 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\\caption{Caption}\n",
@@ -603,9 +664,9 @@
     }
    ],
    "source": [
-    "display_example_table = pd.DataFrame({\n",
-    "    'z' : z_vals_grouped.latex_array()\n",
-    "})\n",
+    "display_example_table = pd.DataFrame()\n",
+    "display_example_table['z'] = z_vals_grouped\n",
+    "display(display_example_table)\n",
     "display_example_table.index.name = 'i'\n",
     "print('simple print statement\\n')\n",
     "print(z_vals_grouped)\n",
@@ -1353,8 +1414,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 1min 48s\n",
-      "Wall time: 18.7 s\n"
+      "CPU times: total: 1min 22s\n",
+      "Wall time: 14 s\n"
      ]
     }
    ],
