--- a/examples.ipynb
+++ b/examples.ipynb
@@ -649,11 +649,11 @@
       "\\toprule\n",
       "z \\\\\n",
       "\\midrule\n",
-      "(1.531515 ± 0.000027) × 10^3 \\\\\n",
-      "(1.53099 ± 0.00027) × 10^3 \\\\\n",
-      "(1.53061 ± 0.00043) × 10^3 \\\\\n",
-      "(1.53310 ± 0.00081) × 10^3 \\\\\n",
-      "(1.5340 ± 0.0013) × 10^3 \\\\\n",
+      "$(1.531515 \\pm 0.000027) \\times 10^{3}$ \\\\\n",
+      "$(1.53099 \\pm 0.00027) \\times 10^{3}$ \\\\\n",
+      "$(1.53061 \\pm 0.00043) \\times 10^{3}$ \\\\\n",
+      "$(1.53310 \\pm 0.00081) \\times 10^{3}$ \\\\\n",
+      "$(1.5340 \\pm 0.0013) \\times 10^{3}$ \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\\caption{Caption}\n",
@@ -839,10 +839,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(z,x,y \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(z,x,y \\right)}\\right)^{2} + s_{z}^{2} \\left(\\frac{\\partial}{\\partial z} w{\\left(z,x,y \\right)}\\right)^{2}$"
+       "$\\displaystyle s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(x,y,z \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(x,y,z \\right)}\\right)^{2} + s_{z}^{2} \\left(\\frac{\\partial}{\\partial z} w{\\left(x,y,z \\right)}\\right)^{2}$"
       ],
       "text/plain": [
-       "Eq(s_w**2, s_x**2*Derivative(w(z, x, y), x)**2 + s_y**2*Derivative(w(z, x, y), y)**2 + s_z**2*Derivative(w(z, x, y), z)**2)"
+       "Eq(s_w**2, s_x**2*Derivative(w(x, y, z), x)**2 + s_y**2*Derivative(w(x, y, z), y)**2 + s_z**2*Derivative(w(x, y, z), z)**2)"
       ]
      },
      "metadata": {},
@@ -853,7 +853,7 @@
      "output_type": "stream",
      "text": [
       "\\[\n",
-      "s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(z,x,y \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(z,x,y \\right)}\\right)^{2} + s_{z}^{2} \\left(\\frac{\\partial}{\\partial z} w{\\left(z,x,y \\right)}\\right)^{2}\n",
+      "s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(x,y,z \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(x,y,z \\right)}\\right)^{2} + s_{z}^{2} \\left(\\frac{\\partial}{\\partial z} w{\\left(x,y,z \\right)}\\right)^{2}\n",
       "\\]\n"
      ]
     },
@@ -1414,8 +1414,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 1min 35s\n",
-      "Wall time: 16.4 s\n"
+      "CPU times: total: 1min 44s\n",
+      "Wall time: 18 s\n"
      ]
     }
    ],
