added better error message

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -898,10 +898,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(z,x,y \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(z,x,y \\right)}\\right)^{2} + s_{z}^{2} \\left(\\frac{\\partial}{\\partial z} w{\\left(z,x,y \\right)}\\right)^{2}$"
+       "$\\displaystyle s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(x,y,z \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(x,y,z \\right)}\\right)^{2} + s_{z}^{2} \\left(\\frac{\\partial}{\\partial z} w{\\left(x,y,z \\right)}\\right)^{2}$"
       ],
       "text/plain": [
-       "Eq(s_w**2, s_x**2*Derivative(w(z, x, y), x)**2 + s_y**2*Derivative(w(z, x, y), y)**2 + s_z**2*Derivative(w(z, x, y), z)**2)"
+       "Eq(s_w**2, s_x**2*Derivative(w(x, y, z), x)**2 + s_y**2*Derivative(w(x, y, z), y)**2 + s_z**2*Derivative(w(x, y, z), z)**2)"
       ]
      },
      "metadata": {},
@@ -912,7 +912,7 @@
      "output_type": "stream",
      "text": [
       "\\[\n",
-      "s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(z,x,y \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(z,x,y \\right)}\\right)^{2} + s_{z}^{2} \\left(\\frac{\\partial}{\\partial z} w{\\left(z,x,y \\right)}\\right)^{2}\n",
+      "s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(x,y,z \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(x,y,z \\right)}\\right)^{2} + s_{z}^{2} \\left(\\frac{\\partial}{\\partial z} w{\\left(x,y,z \\right)}\\right)^{2}\n",
       "\\]\n"
      ]
     },
@@ -1473,8 +1473,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: total: 1min 29s\n",
-      "Wall time: 15.3 s\n"
+      "other\n",
+      "Missing value for required symbols: 'other', 'c'\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b, c, other = sympy.symbols('a, b, c, other')\n",
+    "\n",
+    "print(other)\n",
+    "\n",
+    "expr = a+b+c+other\n",
+    "try:\n",
+    "    x = pt.calc_err(expr,{\n",
+    "        a : pt.Err(1,1),\n",
+    "        b : 1\n",
+    "    })\n",
+    "except Exception as e:\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 1min 50s\n",
+      "Wall time: 18.8 s\n"
      ]
     }
    ],
