--- a/examples.ipynb
+++ b/examples.ipynb
@@ -1475,7 +1475,7 @@
    "source": [
     "## This does not always work !!!\n",
     "\n",
-    "If the same symbols appears multiple times the values are correlated, and therefore direct evaluation on using `sympy` will result in diffrent errors\n"
+    "If the same symbols appears multiple times the values are correlated, then direct evaluation on using `sympy` will result in diffrent errors\n"
    ]
   },
   {
