removed unnecessary imports

--- a/examples.ipynb
+++ b/examples.ipynb
@@ -25,8 +25,6 @@
     "import pandas as pd                                                         \n",
     "import numpy as np\n",
     "import sympy\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sys import stdout\n",
     "np.random.seed(0)"
    ]
   },
@@ -112,7 +110,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "8d33c8fc-4eb0-428f-a103-3fb02ac51cbb",
+       "ref": "9a1c94d7-e602-4e00-8511-b55e46baceae",
        "rows": [
         [
          "0",
@@ -664,7 +662,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "a566277d-06ea-43f8-84cd-3c02f0b1ca22",
+       "ref": "fcb1e7e3-1007-4176-83e7-c2e40cef201d",
        "rows": [
         [
          "0",
@@ -883,7 +881,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "072618d8-7814-4f81-be7a-e1ebdfdaa991",
+       "ref": "02ec1f42-9bb8-4c7a-992a-17137382d90d",
        "rows": [
         [
          "0",
@@ -1328,10 +1326,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(y,x \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(y,x \\right)}\\right)^{2}$"
+       "$\\displaystyle s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(x,y \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(x,y \\right)}\\right)^{2}$"
       ],
       "text/plain": [
-       "Eq(s_w**2, s_x**2*Derivative(w(y, x), x)**2 + s_y**2*Derivative(w(y, x), y)**2)"
+       "Eq(s_w**2, s_x**2*Derivative(w(x, y), x)**2 + s_y**2*Derivative(w(x, y), y)**2)"
       ]
      },
      "metadata": {},
@@ -1342,7 +1340,7 @@
      "output_type": "stream",
      "text": [
       "\\[\n",
-      "s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(y,x \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(y,x \\right)}\\right)^{2}\n",
+      "s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(x,y \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(x,y \\right)}\\right)^{2}\n",
       "\\]\n"
      ]
     },
@@ -1403,6 +1401,7 @@
     }
    ],
    "source": [
+    "from sys import stdout\n",
     "a,x,y,w = sympy.symbols('a,x,y,w')\n",
     "\n",
     "print('our initial equation')\n",
