--- a/examples.ipynb
+++ b/examples.ipynb
@@ -110,7 +110,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "fd2c23e4-5a19-4ca3-a557-b4f263785729",
+       "ref": "2008be16-adac-43ef-a245-41278459fe2a",
        "rows": [
         [
          "0",
@@ -578,7 +578,7 @@
    "outputs": [],
    "source": [
     "x_val = pt.Err(x_mean, x_error)\n",
-    "y_val = pt.Err.from_data(y_data)"
+    "y_val = pt.from_data(y_data)"
    ]
   },
   {
@@ -662,7 +662,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "65737b73-6ccb-4ca9-9fbb-55b75707e860",
+       "ref": "04ffd0d6-bdca-4b56-8235-f4d718e1990b",
        "rows": [
         [
          "0",
@@ -753,13 +753,32 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$(1.53151 \\pm 0.00003) \\times 10^{3}\\\\(1.5310 \\pm 0.0003) \\times 10^{3}\\\\(1.5306 \\pm 0.0004) \\times 10^{3}\\\\(1.5331 \\pm 0.0008) \\times 10^{3}\\\\(1.534 \\pm 0.001) \\times 10^{3}$"
+      ],
+      "text/plain": [
+       "(1.53151 ± 0.00003) × 10^3\n",
+       "(1.5310 ± 0.0003) × 10^3\n",
+       "(1.5306 ± 0.0004) × 10^3\n",
+       "(1.5331 ± 0.0008) × 10^3\n",
+       "(1.534 ± 0.001) × 10^3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "display_example_table = pd.DataFrame()\n",
     "display_example_table['z'] = z_vals_grouped\n",
     "display_example_table.index.name = 'i'\n",
-    "display(display_example_table)"
+    "display(display_example_table)\n",
+    "\n",
+    "z_vals_from_series = pt.concatenate(display_example_table['z'])\n",
+    "display(z_vals_from_series)"
    ]
   },
   {
@@ -808,10 +827,10 @@
    ],
    "source": [
     "print('\\ntoString() showcasing custom arguments\\n')\n",
-    "z_vals_grouped.format = pt.err_format.ENG_FORMAT_REL\n",
+    "z_vals_grouped.format = pt.format.ENG_FORMAT_REL\n",
     "print(z_vals_grouped)\n",
     "\n",
-    "z_vals_grouped.format = pt.err_format.SCI_FORMAT_REL\n",
+    "z_vals_grouped.format = pt.format.SCI_FORMAT_REL\n",
     "print('printing latex representation')\n",
     "display(z_vals_grouped)"
    ]
@@ -881,7 +900,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "8099d3c3-42cc-4fac-ae8c-96b5b5e57a26",
+       "ref": "3a2471f8-1892-43c0-8783-82499bbdf3a9",
        "rows": [
         [
          "0",
@@ -1240,10 +1259,10 @@
     {
      "data": {
       "text/latex": [
-       "$0.0000 \\pm 0.0000$"
+       "$0.0000 \\pm 0$"
       ],
       "text/plain": [
-       "0.0000 ± 0.0000"
+       "0.0000 ± 0"
       ]
      },
      "metadata": {},
@@ -1326,10 +1345,10 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(x,y \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(x,y \\right)}\\right)^{2}$"
+       "$\\displaystyle s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(y,x \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(y,x \\right)}\\right)^{2}$"
       ],
       "text/plain": [
-       "Eq(s_w**2, s_x**2*Derivative(w(x, y), x)**2 + s_y**2*Derivative(w(x, y), y)**2)"
+       "Eq(s_w**2, s_x**2*Derivative(w(y, x), x)**2 + s_y**2*Derivative(w(y, x), y)**2)"
       ]
      },
      "metadata": {},
@@ -1340,7 +1359,7 @@
      "output_type": "stream",
      "text": [
       "\\[\n",
-      "s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(x,y \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(x,y \\right)}\\right)^{2}\n",
+      "s_{w}^{2} = s_{x}^{2} \\left(\\frac{\\partial}{\\partial x} w{\\left(y,x \\right)}\\right)^{2} + s_{y}^{2} \\left(\\frac{\\partial}{\\partial y} w{\\left(y,x \\right)}\\right)^{2}\n",
       "\\]\n"
      ]
     },
@@ -1567,6 +1586,124 @@
     "pt.err_band_plot(x_data.mean, y_data2.mean, y_data2.err, label=r'direct', color = 'green')\n",
     "#end plot automatically displays the plot and adds the legend\n",
     "pt.end_plt()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Diffrent kinds of formatting\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'standard scientific format'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$0.1100 \\pm 0\\\\0.1 \\pm 0.1\\\\0 \\pm 1\\\\0 \\pm 10\\\\1.1 \\pm 0.1\\\\1 \\pm 1\\\\1 \\pm 10\\\\11.1 \\pm 0.1\\\\11 \\pm 1\\\\11 \\pm 10$"
+      ],
+      "text/plain": [
+       "0.1100 ± 0\n",
+       "0.1 ± 0.1\n",
+       "0 ± 1\n",
+       "0 ± 10\n",
+       "1.1 ± 0.1\n",
+       "1 ± 1\n",
+       "1 ± 10\n",
+       "11.1 ± 0.1\n",
+       "11 ± 1\n",
+       "11 ± 10"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'relative scientific format'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$0.1100 \\pm 0\\%\\\\0.1 \\pm 90\\%\\\\0 \\pm 1000\\%\\\\0 \\pm 9090\\%\\\\1.1 \\pm 9\\%\\\\1 \\pm 90\\%\\\\1 \\pm 909\\%\\\\11.1 \\pm 0.9\\%\\\\11 \\pm 9\\%\\\\11 \\pm 90\\%$"
+      ],
+      "text/plain": [
+       "0.1100 ± 0%\n",
+       "0.1 ± 90%\n",
+       "0 ± 1000%\n",
+       "0 ± 9090%\n",
+       "1.1 ± 9%\n",
+       "1 ± 90%\n",
+       "1 ± 909%\n",
+       "11.1 ± 0.9%\n",
+       "11 ± 9%\n",
+       "11 ± 90%"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'custom format with 3 sigfigs for error and 10 for values with no error'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$0.110000000 \\pm 0\\\\0.110 \\pm 0.100\\\\0.11 \\pm 1.10\\\\0.1 \\pm 10.0\\\\1.100 \\pm 0.100\\\\1.10 \\pm 1.00\\\\1.1 \\pm 10.0\\\\11.100 \\pm 0.100\\\\11.10 \\pm 1.00\\\\11.1 \\pm 10.0$"
+      ],
+      "text/plain": [
+       "0.110000000 ± 0\n",
+       "0.110 ± 0.100\n",
+       "0.11 ± 1.10\n",
+       "0.1 ± 10.0\n",
+       "1.100 ± 0.100\n",
+       "1.10 ± 1.00\n",
+       "1.1 ± 10.0\n",
+       "11.100 ± 0.100\n",
+       "11.10 ± 1.00\n",
+       "11.1 ± 10.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fmt_example = pt.Err([0.11,0.11,0.11,0.11,1.1,1.1,1.1,11.1,11.1,11.1],[0,0.1,1.1,10,0.1,1,10,0.1,1,10])\n",
+    "\n",
+    "display('standard scientific format')\n",
+    "display(fmt_example)\n",
+    "\n",
+    "fmt_example.format = pt.format.SCI_FORMAT_REL\n",
+    "display('relative scientific format')\n",
+    "display(fmt_example)\n",
+    "\n",
+    "fmt_example.format = pt.format.ErrFormat(err_sigfigs=3, val_sigfigs=10, relative=False)\n",
+    "display('custom format with 3 sigfigs for error and 10 for values with no error')\n",
+    "display(fmt_example)"
    ]
   }
  ],
