--- a/examples.ipynb
+++ b/examples.ipynb
@@ -110,7 +110,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "2008be16-adac-43ef-a245-41278459fe2a",
+       "ref": "9cd4de47-2f7e-473b-826c-70fb912dfdb6",
        "rows": [
         [
          "0",
@@ -662,7 +662,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "04ffd0d6-bdca-4b56-8235-f4d718e1990b",
+       "ref": "c445dd44-25dd-4042-b108-12b49f425ce8",
        "rows": [
         [
          "0",
@@ -757,7 +757,11 @@
     {
      "data": {
       "text/latex": [
-       "$(1.53151 \\pm 0.00003) \\times 10^{3}\\\\(1.5310 \\pm 0.0003) \\times 10^{3}\\\\(1.5306 \\pm 0.0004) \\times 10^{3}\\\\(1.5331 \\pm 0.0008) \\times 10^{3}\\\\(1.534 \\pm 0.001) \\times 10^{3}$"
+       "$(1.53151 \\pm 0.00003) \\times 10^{3}\\\\\n",
+       "(1.5310 \\pm 0.0003) \\times 10^{3}\\\\\n",
+       "(1.5306 \\pm 0.0004) \\times 10^{3}\\\\\n",
+       "(1.5331 \\pm 0.0008) \\times 10^{3}\\\\\n",
+       "(1.534 \\pm 0.001) \\times 10^{3}$"
       ],
       "text/plain": [
        "(1.53151 ± 0.00003) × 10^3\n",
@@ -800,25 +804,29 @@
       "\n",
       "toString() showcasing custom arguments\n",
       "\n",
-      "(1.531515 ± 0.0018%) × 10^3\n",
-      "(1.53099 ± 0.017%) × 10^3\n",
-      "(1.53061 ± 0.028%) × 10^3\n",
-      "(1.53310 ± 0.053%) × 10^3\n",
-      "(1.5340 ± 0.086%) × 10^3\n",
+      "(1.531515 ± 0.0018\\%) × 10^3\n",
+      "(1.53099 ± 0.017\\%) × 10^3\n",
+      "(1.53061 ± 0.028\\%) × 10^3\n",
+      "(1.53310 ± 0.053\\%) × 10^3\n",
+      "(1.5340 ± 0.086\\%) × 10^3\n",
       "printing latex representation\n"
      ]
     },
     {
      "data": {
       "text/latex": [
-       "$(1.53151 \\pm 0.002\\%) \\times 10^{3}\\\\(1.5310 \\pm 0.02\\%) \\times 10^{3}\\\\(1.5306 \\pm 0.03\\%) \\times 10^{3}\\\\(1.5331 \\pm 0.05\\%) \\times 10^{3}\\\\(1.534 \\pm 0.09\\%) \\times 10^{3}$"
+       "$(1.53151 \\times 10^{3}) \\pm 0.002\\%\\\\\n",
+       "(1.5310 \\times 10^{3}) \\pm 0.02\\%\\\\\n",
+       "(1.5306 \\times 10^{3}) \\pm 0.03\\%\\\\\n",
+       "(1.5331 \\times 10^{3}) \\pm 0.05\\%\\\\\n",
+       "(1.534 \\times 10^{3}) \\pm 0.09\\%$"
       ],
       "text/plain": [
-       "(1.53151 ± 0.002%) × 10^3\n",
-       "(1.5310 ± 0.02%) × 10^3\n",
-       "(1.5306 ± 0.03%) × 10^3\n",
-       "(1.5331 ± 0.05%) × 10^3\n",
-       "(1.534 ± 0.09%) × 10^3"
+       "(1.53151 ± 0.002\\%) × 10^3\n",
+       "(1.5310 ± 0.02\\%) × 10^3\n",
+       "(1.5306 ± 0.03\\%) × 10^3\n",
+       "(1.5331 ± 0.05\\%) × 10^3\n",
+       "(1.534 ± 0.09\\%) × 10^3"
       ]
      },
      "metadata": {},
@@ -862,14 +870,18 @@
     {
      "data": {
       "text/latex": [
-       "$(1.53151 \\pm 0.002\\%) \\times 10^{3}\\\\(1.5310 \\pm 0.02\\%) \\times 10^{3}\\\\(1.5306 \\pm 0.03\\%) \\times 10^{3}\\\\(1.5331 \\pm 0.05\\%) \\times 10^{3}\\\\(1.534 \\pm 0.09\\%) \\times 10^{3}$"
+       "$(1.53151 \\times 10^{3}) \\pm 0.002\\%\\\\\n",
+       "(1.5310 \\times 10^{3}) \\pm 0.02\\%\\\\\n",
+       "(1.5306 \\times 10^{3}) \\pm 0.03\\%\\\\\n",
+       "(1.5331 \\times 10^{3}) \\pm 0.05\\%\\\\\n",
+       "(1.534 \\times 10^{3}) \\pm 0.09\\%$"
       ],
       "text/plain": [
-       "(1.53151 ± 0.002%) × 10^3\n",
-       "(1.5310 ± 0.02%) × 10^3\n",
-       "(1.5306 ± 0.03%) × 10^3\n",
-       "(1.5331 ± 0.05%) × 10^3\n",
-       "(1.534 ± 0.09%) × 10^3"
+       "(1.53151 ± 0.002\\%) × 10^3\n",
+       "(1.5310 ± 0.02\\%) × 10^3\n",
+       "(1.5306 ± 0.03\\%) × 10^3\n",
+       "(1.5331 ± 0.05\\%) × 10^3\n",
+       "(1.534 ± 0.09\\%) × 10^3"
       ]
      },
      "metadata": {},
@@ -879,7 +891,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$(1.53151 \\pm 0.002\\%) \\times 10^{3}\\\\(1.5310 \\pm 0.02\\%) \\times 10^{3}\\\\(1.5306 \\pm 0.03\\%) \\times 10^{3}\\\\(1.5331 \\pm 0.05\\%) \\times 10^{3}\\\\(1.534 \\pm 0.09\\%) \\times 10^{3}$\n",
+      "\\SI{1.53151e3}{\\SI{0.002}{\\percent}}\\\\\n",
+      "\\SI{1.5310e3}{\\SI{0.02}{\\percent}}\\\\\n",
+      "\\SI{1.5306e3}{\\SI{0.03}{\\percent}}\\\\\n",
+      "\\SI{1.5331e3}{\\SI{0.05}{\\percent}}\\\\\n",
+      "\\SI{1.534e3}{\\SI{0.09}{\\percent}}\n",
       "\n",
       "logging a DataFrame\n"
      ]
@@ -900,7 +916,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "3a2471f8-1892-43c0-8783-82499bbdf3a9",
+       "ref": "e9107b6b-b6f6-4062-80df-627f9a46d0ae",
        "rows": [
         [
          "0",
@@ -1002,11 +1018,11 @@
       "\\toprule\n",
       "z \\\\\n",
       "\\midrule\n",
-      "$(1.53151 \\pm 0.00003) \\times 10^{3}$ \\\\\n",
-      "$(1.5310 \\pm 0.0003) \\times 10^{3}$ \\\\\n",
-      "$(1.5306 \\pm 0.0004) \\times 10^{3}$ \\\\\n",
-      "$(1.5331 \\pm 0.0008) \\times 10^{3}$ \\\\\n",
-      "$(1.534 \\pm 0.001) \\times 10^{3}$ \\\\\n",
+      "\\SI{1.53151(0.00003)e3}{} \\\\\n",
+      "\\SI{1.5310(0.0003)e3}{} \\\\\n",
+      "\\SI{1.5306(0.0004)e3}{} \\\\\n",
+      "\\SI{1.5331(0.0008)e3}{} \\\\\n",
+      "\\SI{1.534(0.001)e3}{} \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\\caption{Caption}\n",
@@ -1068,10 +1084,10 @@
     {
      "data": {
       "text/latex": [
-       "$(1.5331 \\pm 0.05\\%) \\times 10^{3}$"
+       "$(1.5331 \\times 10^{3}) \\pm 0.05\\%$"
       ],
       "text/plain": [
-       "(1.5331 ± 0.05%) × 10^3"
+       "(1.5331 ± 0.05\\%) × 10^3"
       ]
      },
      "metadata": {},
@@ -1080,12 +1096,14 @@
     {
      "data": {
       "text/latex": [
-       "$(1.53151 \\pm 0.002\\%) \\times 10^{3}\\\\(1.5310 \\pm 0.02\\%) \\times 10^{3}\\\\(1.5306 \\pm 0.03\\%) \\times 10^{3}$"
+       "$(1.53151 \\times 10^{3}) \\pm 0.002\\%\\\\\n",
+       "(1.5310 \\times 10^{3}) \\pm 0.02\\%\\\\\n",
+       "(1.5306 \\times 10^{3}) \\pm 0.03\\%$"
       ],
       "text/plain": [
-       "(1.53151 ± 0.002%) × 10^3\n",
-       "(1.5310 ± 0.02%) × 10^3\n",
-       "(1.5306 ± 0.03%) × 10^3"
+       "(1.53151 ± 0.002\\%) × 10^3\n",
+       "(1.5310 ± 0.02\\%) × 10^3\n",
+       "(1.5306 ± 0.03\\%) × 10^3"
       ]
      },
      "metadata": {},
@@ -1095,8 +1113,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0: (1.53151 ± 0.002%) × 10^3\n",
-      "1: (1.5310 ± 0.02%) × 10^3\n"
+      "0: (1.53151 ± 0.002\\%) × 10^3\n",
+      "1: (1.5310 ± 0.02\\%) × 10^3\n"
      ]
     }
    ],
@@ -1122,7 +1140,9 @@
     {
      "data": {
       "text/latex": [
-       "$1.0 \\pm 0.1\\\\2.0 \\pm 0.2\\\\3.0 \\pm 0.3$"
+       "$1.0 \\pm 0.1\\\\\n",
+       "2.0 \\pm 0.2\\\\\n",
+       "3.0 \\pm 0.3$"
       ],
       "text/plain": [
        "1.0 ± 0.1\n",
@@ -1156,10 +1176,10 @@
     {
      "data": {
       "text/latex": [
-       "$(1.5320 \\pm 0.02\\%) \\times 10^{3}$"
+       "$(1.5320 \\times 10^{3}) \\pm 0.02\\%$"
       ],
       "text/plain": [
-       "(1.5320 ± 0.02%) × 10^3"
+       "(1.5320 ± 0.02\\%) × 10^3"
       ]
      },
      "metadata": {},
@@ -1168,10 +1188,10 @@
     {
      "data": {
       "text/latex": [
-       "$(1.53151 \\pm 0.002\\%) \\times 10^{3}$"
+       "$(1.53151 \\times 10^{3}) \\pm 0.002\\%$"
       ],
       "text/plain": [
-       "(1.53151 ± 0.002%) × 10^3"
+       "(1.53151 ± 0.002\\%) × 10^3"
       ]
      },
      "metadata": {},
@@ -1612,7 +1632,16 @@
     {
      "data": {
       "text/latex": [
-       "$0.1100 \\pm 0\\\\0.1 \\pm 0.1\\\\0 \\pm 1\\\\0 \\pm 10\\\\1.1 \\pm 0.1\\\\1 \\pm 1\\\\1 \\pm 10\\\\11.1 \\pm 0.1\\\\11 \\pm 1\\\\11 \\pm 10$"
+       "$0.1100 \\pm 0\\\\\n",
+       "0.1 \\pm 0.1\\\\\n",
+       "0 \\pm 1\\\\\n",
+       "0 \\pm 10\\\\\n",
+       "1.1 \\pm 0.1\\\\\n",
+       "1 \\pm 1\\\\\n",
+       "1 \\pm 10\\\\\n",
+       "11.1 \\pm 0.1\\\\\n",
+       "11 \\pm 1\\\\\n",
+       "11 \\pm 10$"
       ],
       "text/plain": [
        "0.1100 ± 0\n",
@@ -1631,6 +1660,22 @@
      "output_type": "display_data"
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\SI{0.1100(0)}{}\\\\\n",
+      "\\SI{0.1(0.1)}{}\\\\\n",
+      "\\SI{0(1)}{}\\\\\n",
+      "\\SI{0(10)}{}\\\\\n",
+      "\\SI{1.1(0.1)}{}\\\\\n",
+      "\\SI{1(1)}{}\\\\\n",
+      "\\SI{1(10)}{}\\\\\n",
+      "\\SI{11.1(0.1)}{}\\\\\n",
+      "\\SI{11(1)}{}\\\\\n",
+      "\\SI{11(10)}{}\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "'relative scientific format'"
@@ -1642,23 +1687,48 @@
     {
      "data": {
       "text/latex": [
-       "$0.1100 \\pm 0\\%\\\\0.1 \\pm 90\\%\\\\0 \\pm 1000\\%\\\\0 \\pm 9090\\%\\\\1.1 \\pm 9\\%\\\\1 \\pm 90\\%\\\\1 \\pm 909\\%\\\\11.1 \\pm 0.9\\%\\\\11 \\pm 9\\%\\\\11 \\pm 90\\%$"
+       "$0.1100 \\pm 0\\%\\\\\n",
+       "0.1 \\pm 90\\%\\\\\n",
+       "0 \\pm 1000\\%\\\\\n",
+       "0 \\pm 9090\\%\\\\\n",
+       "1.1 \\pm 9\\%\\\\\n",
+       "1 \\pm 90\\%\\\\\n",
+       "1 \\pm 909\\%\\\\\n",
+       "11.1 \\pm 0.9\\%\\\\\n",
+       "11 \\pm 9\\%\\\\\n",
+       "11 \\pm 90\\%$"
       ],
       "text/plain": [
-       "0.1100 ± 0%\n",
-       "0.1 ± 90%\n",
-       "0 ± 1000%\n",
-       "0 ± 9090%\n",
-       "1.1 ± 9%\n",
-       "1 ± 90%\n",
-       "1 ± 909%\n",
-       "11.1 ± 0.9%\n",
-       "11 ± 9%\n",
-       "11 ± 90%"
+       "0.1100 ± 0\\%\n",
+       "0.1 ± 90\\%\n",
+       "0 ± 1000\\%\n",
+       "0 ± 9090\\%\n",
+       "1.1 ± 9\\%\n",
+       "1 ± 90\\%\n",
+       "1 ± 909\\%\n",
+       "11.1 ± 0.9\\%\n",
+       "11 ± 9\\%\n",
+       "11 ± 90\\%"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\SI{0.1100}{\\SI{0}{\\percent}}\\\\\n",
+      "\\SI{0.1}{\\SI{90}{\\percent}}\\\\\n",
+      "\\SI{0}{\\SI{1000}{\\percent}}\\\\\n",
+      "\\SI{0}{\\SI{9090}{\\percent}}\\\\\n",
+      "\\SI{1.1}{\\SI{9}{\\percent}}\\\\\n",
+      "\\SI{1}{\\SI{90}{\\percent}}\\\\\n",
+      "\\SI{1}{\\SI{909}{\\percent}}\\\\\n",
+      "\\SI{11.1}{\\SI{0.9}{\\percent}}\\\\\n",
+      "\\SI{11}{\\SI{9}{\\percent}}\\\\\n",
+      "\\SI{11}{\\SI{90}{\\percent}}\n"
+     ]
     },
     {
      "data": {
@@ -1672,7 +1742,16 @@
     {
      "data": {
       "text/latex": [
-       "$0.110000000 \\pm 0\\\\0.110 \\pm 0.100\\\\0.11 \\pm 1.10\\\\0.1 \\pm 10.0\\\\1.100 \\pm 0.100\\\\1.10 \\pm 1.00\\\\1.1 \\pm 10.0\\\\11.100 \\pm 0.100\\\\11.10 \\pm 1.00\\\\11.1 \\pm 10.0$"
+       "$0.110000000 \\pm 0\\\\\n",
+       "0.110 \\pm 0.100\\\\\n",
+       "0.11 \\pm 1.10\\\\\n",
+       "0.1 \\pm 10.0\\\\\n",
+       "1.100 \\pm 0.100\\\\\n",
+       "1.10 \\pm 1.00\\\\\n",
+       "1.1 \\pm 10.0\\\\\n",
+       "11.100 \\pm 0.100\\\\\n",
+       "11.10 \\pm 1.00\\\\\n",
+       "11.1 \\pm 10.0$"
       ],
       "text/plain": [
        "0.110000000 ± 0\n",
@@ -1689,27 +1768,43 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\SI{0.110000000(0)}{}\\\\\n",
+      "\\SI{0.110(0.100)}{}\\\\\n",
+      "\\SI{0.11(1.10)}{}\\\\\n",
+      "\\SI{0.1(10.0)}{}\\\\\n",
+      "\\SI{1.100(0.100)}{}\\\\\n",
+      "\\SI{1.10(1.00)}{}\\\\\n",
+      "\\SI{1.1(10.0)}{}\\\\\n",
+      "\\SI{11.100(0.100)}{}\\\\\n",
+      "\\SI{11.10(1.00)}{}\\\\\n",
+      "\\SI{11.1(10.0)}{}\n"
+     ]
     }
    ],
    "source": [
     "fmt_example = pt.Err([0.11,0.11,0.11,0.11,1.1,1.1,1.1,11.1,11.1,11.1],[0,0.1,1.1,10,0.1,1,10,0.1,1,10])\n",
     "\n",
     "display('standard scientific format')\n",
-    "display(fmt_example)\n",
+    "pt.log(fmt_example)\n",
     "\n",
     "fmt_example.format = pt.format.SCI_FORMAT_REL\n",
     "display('relative scientific format')\n",
-    "display(fmt_example)\n",
+    "pt.log(fmt_example)\n",
     "\n",
     "fmt_example.format = pt.format.ErrFormat(err_sigfigs=3, val_sigfigs=10, relative=False)\n",
     "display('custom format with 3 sigfigs for error and 10 for values with no error')\n",
-    "display(fmt_example)"
+    "pt.log(fmt_example)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.11.5)",
    "language": "python",
    "name": "python3"
   },
